fixed Payroll list page flickering issue

--- a/assets/scripts/fe/src/assets/sass/pages/_payroll.scss
+++ b/assets/scripts/fe/src/assets/sass/pages/_payroll.scss
@@ -24,9 +24,9 @@
   padding: torem(50) 1.5rem;
 
   .payslip-preview {
-    width: 100%;
+  
     height: 100%;
-    max-width: torem(631);
+    width: torem(631);
     border-radius: 6px;
     box-shadow: 0 10px 30px 0 rgba(116, 133, 150, 0.11);
     background: $white;
